<resources>
        <string name="app_name">Clothing Suggester</string>
        <string name="get_dressed">Get Dressed</string>
        <string name="suggestion_for_you">Suggestion for you</string>
        <string name="rain">Rainfall</string>
        <string name="humidity">Humidity</string>
        <string name="wind">Wind</string>
        <string name="grant_permission">Grant Permission</string>
        <string name="requires_location">This app requires location permission.</string>
        <string name="location_permission">Location Permission Required</string>
        <string name="internet_title">Something went wrong</string>
        <string name="internet_description">Check your internet connection and try again</string>
        <string name="internet_button">Retry</string>
</resources>